--- a/Reloadly.Console.Example/Reloadly.Console.Example.csproj
+++ b/Reloadly.Console.Example/Reloadly.Console.Example.csproj
@@ -26,10 +26,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <ProjectReference Include="..\dotnet-sdk-airtime\src\main\Reloadly.Airtime.csproj" />
     <ProjectReference Include="..\dotnet-sdk-authentication\src\main\Reloadly.Authentication.csproj" />
     <ProjectReference Include="..\dotnet-sdk-core\src\main\Reloadly.Core\Reloadly.Core.csproj" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 </Project>
