--- a/Reloadly.Console.Example/Reloadly.Console.Example.csproj
+++ b/Reloadly.Console.Example/Reloadly.Console.Example.csproj
@@ -18,16 +18,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <ProjectReference Include="..\dotnet-sdk-airtime\src\main\Reloadly.Airtime.csproj" />
     <ProjectReference Include="..\dotnet-sdk-authentication\src\main\Reloadly.Authentication.csproj" />
-  </ItemGroup>
+    <ProjectReference Include="..\dotnet-sdk-core\src\main\Reloadly.Core\Reloadly.Core.csproj" />
+  </ItemGroup>-->
 
 </Project>
